--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
 body {
   text-align: center;
 }
-li {
-  text-decoration: center;
+footer {
+  border-top: 1px solid #f9f7fe;
+  text-align: center;
+  padding-top: 15px;
+  color: rgba(39, 33, 66, 0.4);
 }
